--- a/Level0/Unit1/teacher/Fine Motor Skills/index.html
+++ b/Level0/Unit1/teacher/Fine Motor Skills/index.html
@@ -347,7 +347,16 @@
         }
       })();
     }
-  </script>
+  
+  // --- Ensure the PDF button is wired correctly even if inline onclick fails ---
+  document.addEventListener('DOMContentLoaded', ()=>{
+    const btn = document.getElementById('pdfBtn');
+    if(btn){
+      try{ btn.onclick = null; }catch(e){}
+      btn.addEventListener('click', generatePDFPrintOnly);
+    }
+  });
+</script>
 
   <script>
     function clamp(val, min, max){ return Math.max(min, Math.min(max, val)); }
