--- a/Level0/Unit1/teacher/Fine Motor Skills/index.html
+++ b/Level0/Unit1/teacher/Fine Motor Skills/index.html
@@ -224,7 +224,7 @@
         </div>
         <div class="actions" style="margin-top:12px;">
           <button id="addBtn" class="btn" onclick="addActivity()">Add Activity</button>
-          <button id="pdfBtn" class="btn btn-secondary" onclick="generatePDFPrintOnly()">Generate PDF</button>
+          <button id="pdfBtn" class="btn btn-secondary">Generate PDF</button>
         </div>
       </aside>
 
@@ -237,126 +237,7 @@
   </main>
 
   <!-- html2pdf -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js">
-    function generatePDFPrintOnly(){
-      // Build a clean, print-only document: Logo + Name/Date + Activities
-      const printRoot = document.createElement('div');
-      printRoot.id = 'print-root';
-      printRoot.style.background = '#ffffff';
-      printRoot.style.padding = '8mm';
-
-      // Header (Logo + Name/Date)
-      const header = document.createElement('div');
-      header.style.display = 'flex';
-      header.style.alignItems = 'center';
-      header.style.gap = '12px';
-      header.style.marginBottom = '12px';
-
-      const logo = document.createElement('img');
-      logo.src = 'Logo.png';
-      logo.alt = 'Logo';
-      logo.style.width = '80px';
-      logo.style.height = 'auto';
-      header.appendChild(logo);
-
-      const nameDateWrap = document.createElement('div');
-      nameDateWrap.style.marginLeft = 'auto';
-      nameDateWrap.style.fontSize = '14px';
-      nameDateWrap.textContent = 'Name: _________________________________________   Date: _____________';
-      header.appendChild(nameDateWrap);
-
-      printRoot.appendChild(header);
-
-      // Activities -> clone each line into a print-friendly row
-      const lines = document.querySelectorAll('#activities .line');
-      lines.forEach((srcLine)=>{
-        const printLine = document.createElement('div');
-        printLine.style.display = 'grid';
-        printLine.style.gridTemplateColumns = '150px 1fr';
-        printLine.style.gap = '12px';
-        printLine.style.alignItems = 'center';
-        printLine.style.margin = '10px 0';
-        printLine.style.pageBreakInside = 'avoid';
-
-        // Image (optional)
-        const img = srcLine.querySelector('img.image-preview');
-        if(img){
-          const cloneImg = document.createElement('img');
-          cloneImg.src = img.src;
-          cloneImg.alt = 'Activity image';
-          cloneImg.style.width = '150px';
-          cloneImg.style.height = 'auto';
-          printLine.appendChild(cloneImg);
-        } else {
-          const spacer = document.createElement('div');
-          spacer.style.width = '150px';
-          spacer.style.height = '1px';
-          printLine.appendChild(spacer);
-        }
-
-        // Text (Word + Dotted repetitions)
-        const textWrap = document.createElement('div');
-        const word = (srcLine.querySelector('.word')?.textContent || '').trim();
-
-        const wordTitle = document.createElement('div');
-        wordTitle.textContent = word;
-        wordTitle.style.fontSize = '36px';
-        wordTitle.style.fontWeight = '700';
-        wordTitle.style.marginBottom = '4px';
-        textWrap.appendChild(wordTitle);
-
-        const dotted = document.createElement('div');
-        dotted.style.fontFamily = '\'KGPrimaryDots\', Arial, sans-serif';
-        dotted.style.fontSize = '48px';
-        dotted.style.letterSpacing = '3px';
-        dotted.style.lineHeight = '1.3';
-
-        const dottedSource = srcLine.querySelector('.dotted-text');
-        if(dottedSource){
-          // clone dotted content (spans) so it prints exactly like on screen
-          dotted.innerHTML = dottedSource.innerHTML;
-        } else if(word){
-          dotted.textContent = word + ' ';
-        }
-
-        textWrap.appendChild(dotted);
-        printLine.appendChild(textWrap);
-        printRoot.appendChild(printLine);
-      });
-
-      document.body.appendChild(printRoot);
-
-      const opt = {
-        filename: 'Hannah_Fine_Motor_Skills.pdf',
-        margin: [8,8,12,8],
-        pagebreak: { mode: ['avoid-all','css','legacy'] },
-        image: { type: 'jpeg', quality: 0.98 },
-        html2canvas: { scale: 2, useCORS: true, letterRendering: true },
-        jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait', compress: true }
-      };
-
-      (async ()=>{
-        try{
-          if(document.fonts && document.fonts.ready){ await document.fonts.ready; }
-          await html2pdf().from(printRoot).set(opt).save();
-        } catch(err){
-          console.error(err);
-          alert('There was an error generating the PDF. Please try again.');
-        } finally {
-          printRoot.remove();
-        }
-      })();
-    }
-  
-  // --- Ensure the PDF button is wired correctly even if inline onclick fails ---
-  document.addEventListener('DOMContentLoaded', ()=>{
-    const btn = document.getElementById('pdfBtn');
-    if(btn){
-      try{ btn.onclick = null; }catch(e){}
-      btn.addEventListener('click', generatePDFPrintOnly);
-    }
-  });
-</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
   <script>
     function clamp(val, min, max){ return Math.max(min, Math.min(max, val)); }
@@ -427,160 +308,145 @@
       line.appendChild(wrap);
     }
 
-    async function generatePDF(){
-      const toHide = [
-        ...document.querySelectorAll('.remove-btn'),
-        document.getElementById('imageInput'),
-        document.getElementById('wordInput'),
-        document.getElementById('repeatInput'),
-        document.getElementById('addBtn'),
-        document.getElementById('pdfBtn'),
-        ...document.querySelectorAll('.back-btn')
-      ].filter(Boolean);
-      toHide.forEach(el => el.classList.add('hidden'));
+    async function generatePDFPrintOnly(){
+      if(typeof html2pdf === 'undefined'){
+        alert('PDF engine failed to load. Check your internet connection to Cloudflare CDN.');
+        return;
+      }
+      
+      const lines = document.querySelectorAll('#activities .line');
+      if(!lines.length){ 
+        alert('Add at least one activity before generating the PDF.'); 
+        return; 
+      }
 
-      // Name/Date
-      const nameDate = document.createElement('div');
-      nameDate.textContent = 'Name: _________________________________________   Date: _____________';
-      nameDate.style.margin = '8px 0 14px';
-      const hero = document.querySelector('.hero');
-      hero.after(nameDate);
+      // Build a clean, print-only document: Logo + Name/Date + Activities
+      const printRoot = document.createElement('div');
+      printRoot.id = 'print-root';
+      printRoot.style.background = '#ffffff';
+      printRoot.style.padding = '8mm';
+
+      // Header (Logo + Name/Date)
+      const header = document.createElement('div');
+      header.style.display = 'flex';
+      header.style.alignItems = 'center';
+      header.style.gap = '12px';
+      header.style.marginBottom = '12px';
+
+      const logo = document.createElement('img');
+      logo.src = 'Logo.png';
+      logo.alt = 'Logo';
+      logo.style.width = '80px';
+      logo.style.height = 'auto';
+      header.appendChild(logo);
+
+      const nameDateWrap = document.createElement('div');
+      nameDateWrap.style.marginLeft = 'auto';
+      nameDateWrap.style.fontSize = '14px';
+      nameDateWrap.textContent = 'Name: _________________________________________   Date: _____________';
+      header.appendChild(nameDateWrap);
+
+      printRoot.appendChild(header);
+
+      // Activities -> clone each line into a print-friendly row
+      lines.forEach((srcLine)=>{
+        const printLine = document.createElement('div');
+        printLine.style.display = 'grid';
+        printLine.style.gridTemplateColumns = '150px 1fr';
+        printLine.style.gap = '12px';
+        printLine.style.alignItems = 'center';
+        printLine.style.margin = '10px 0';
+        printLine.style.pageBreakInside = 'avoid';
+
+        // Image (optional)
+        const img = srcLine.querySelector('img.image-preview');
+        if(img){
+          const cloneImg = document.createElement('img');
+          cloneImg.src = img.src;
+          cloneImg.alt = 'Activity image';
+          cloneImg.style.width = '150px';
+          cloneImg.style.height = 'auto';
+          printLine.appendChild(cloneImg);
+        } else {
+          const spacer = document.createElement('div');
+          spacer.style.width = '150px';
+          spacer.style.height = '1px';
+          printLine.appendChild(spacer);
+        }
+
+        // Text (Word + Dotted repetitions)
+        const textWrap = document.createElement('div');
+        const word = (srcLine.querySelector('.word')?.textContent || '').trim();
+
+        const wordTitle = document.createElement('div');
+        wordTitle.textContent = word;
+        wordTitle.style.fontSize = '36px';
+        wordTitle.style.fontWeight = '700';
+        wordTitle.style.marginBottom = '4px';
+        textWrap.appendChild(wordTitle);
+
+        const dotted = document.createElement('div');
+        dotted.style.fontFamily = '\'KGPrimaryDots\', Arial, sans-serif';
+        dotted.style.fontSize = '48px';
+        dotted.style.letterSpacing = '3px';
+        dotted.style.lineHeight = '1.3';
+
+        const dottedSource = srcLine.querySelector('.dotted-text');
+        if(dottedSource){
+          // clone dotted content (spans) so it prints exactly like on screen
+          dotted.innerHTML = dottedSource.innerHTML;
+        } else if(word){
+          dotted.textContent = word + ' ';
+        }
+
+        textWrap.appendChild(dotted);
+        printLine.appendChild(textWrap);
+        printRoot.appendChild(printLine);
+      });
+
+      document.body.appendChild(printRoot);
+
+      const opt = {
+        filename: 'Hannah_Fine_Motor_Skills.pdf',
+        margin: [8,8,12,8],
+        pagebreak: { mode: ['avoid-all','css','legacy'] },
+        image: { type: 'jpeg', quality: 0.98 },
+        html2canvas: { scale: 2, useCORS: true, letterRendering: true },
+        jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait', compress: true }
+      };
 
       try{
-        if(document.fonts && document.fonts.ready){ await document.fonts.ready; }
-        const element = document.body;
-        const opt = {
-          filename: 'Hannah_Fine_Motor_Skills.pdf',
-          margin: [8,8,12,8],
-          pagebreak: { mode: ['avoid-all','css','legacy'] },
-          image: { type: 'jpeg', quality: 0.98 },
-          html2canvas: { scale: 2, useCORS: true, letterRendering: true },
-          jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait', compress: true }
-        };
-        await html2pdf().from(element).set(opt).save();
-      } catch(err){
-        console.error(err); alert('There was an error generating the PDF. Please try again.');
-      } finally {
-        toHide.forEach(el => el.classList.remove('hidden'));
-        if(nameDate && nameDate.parentNode){ nameDate.parentNode.removeChild(nameDate); }
-      }
-    }
-  </script>
-<script>
-(function(){
-  // Failsafe re-bind & safe redefinition without touching earlier blocks
-  const domReady = () => new Promise((resolve)=>{
-    if(document.readyState !== 'loading') return resolve();
-    document.addEventListener('DOMContentLoaded', resolve, { once:true });
-  });
-  const clamp = (val, min, max) => Math.max(min, Math.min(max, val));
-
-  // If addActivity is missing, (re)define minimal version compatible with current DOM
-  if(typeof window.addActivity !== 'function'){
-    window.addActivity = function(){
-      const file = document.getElementById('imageInput').files[0];
-      const word = (document.getElementById('wordInput').value || '').trim();
-      const repeatRaw = document.getElementById('repeatInput').value;
-      const repeat = clamp(parseInt(repeatRaw || '1', 10), 1, 25);
-      if(!word){ alert('Please enter a word.'); return; }
-      if(isNaN(repeat)){ alert('Please enter a valid number of repetitions.'); return; }
-      const container = document.getElementById('activities');
-      const line = document.createElement('div');
-      line.className = 'line';
-      const removeBtn = document.createElement('button');
-      removeBtn.className = 'remove-btn no-print';
-      removeBtn.textContent = '×';
-      removeBtn.onclick = () => container.removeChild(line);
-      line.appendChild(removeBtn);
-      const appendWordAndDottedText = (line, word, repeat)=>{
-        const wrap = document.createElement('div');
-        wrap.style.display = 'inline-block';
-        const wordSpan = document.createElement('span');
-        wordSpan.className = 'word';
-        wordSpan.textContent = word;
-        const dotted = document.createElement('span');
-        dotted.className = 'dotted-text';
-        for(let i=0;i<repeat;i++){
-          const span = document.createElement('span');
-          span.textContent = word + (i < repeat-1 ? ' ' : '');
-          dotted.appendChild(span);
+        // Wait for fonts and images to load
+        if(document.fonts && document.fonts.ready){ 
+          await document.fonts.ready; 
         }
-        wrap.appendChild(wordSpan);
-        wrap.appendChild(dotted);
-        line.appendChild(wrap);
-      };
-      if(file){
-        const reader = new FileReader();
-        reader.onload = (e)=>{ const img = document.createElement('img'); img.src = e.target.result; img.className = 'image-preview'; line.appendChild(img); appendWordAndDottedText(line, word, repeat); };
-        reader.readAsDataURL(file);
-      } else {
-        appendWordAndDottedText(line, word, repeat);
+        
+        // Wait for images to load
+        const images = printRoot.querySelectorAll('img');
+        await Promise.all(Array.from(images).map(img => {
+          if(img.complete) return Promise.resolve();
+          return new Promise(resolve => {
+            img.onload = resolve;
+            img.onerror = resolve;
+          });
+        }));
+
+        await html2pdf().from(printRoot).set(opt).save();
+      } catch(err){
+        console.error('PDF Generation Error:', err);
+        alert('There was an error generating the PDF. Please try again.');
+      } finally {
+        printRoot.remove();
       }
-      container.appendChild(line);
-      document.getElementById('wordInput').value = '';
-      document.getElementById('repeatInput').value = '';
-      document.getElementById('imageInput').value = '';
     }
-  }
 
-  async function waitForFonts(ms=3000){
-    if(!(document.fonts && document.fonts.ready)) return;
-    const timer = new Promise(r=>setTimeout(r, ms));
-    try { await Promise.race([document.fonts.ready, timer]); } catch(_){}
-  }
-
-  window.generatePDFPrintOnly = async function(){
-    if(typeof html2pdf === 'undefined'){
-      alert('PDF engine failed to load. Check your internet connection to Cloudflare CDN.');
-      return;
-    }
-    const lines = document.querySelectorAll('#activities .line');
-    if(!lines.length){ alert('Add at least one activity before generating the PDF.'); return; }
-
-    const printRoot = document.createElement('div');
-    printRoot.id = 'print-root';
-    printRoot.style.background = '#ffffff';
-    printRoot.style.padding = '8mm';
-
-    const header = document.createElement('div');
-    header.style.display = 'flex'; header.style.alignItems = 'center'; header.style.gap = '12px'; header.style.marginBottom = '12px';
-    const logo = document.createElement('img'); logo.src = 'Logo.png'; logo.alt = 'Logo'; logo.style.width = '80px'; header.appendChild(logo);
-    const nameDateWrap = document.createElement('div'); nameDateWrap.style.marginLeft = 'auto'; nameDateWrap.style.fontSize = '14px'; nameDateWrap.textContent = 'Name: _________________________________________   Date: _____________'; header.appendChild(nameDateWrap);
-    printRoot.appendChild(header);
-
-    lines.forEach((srcLine)=>{
-      const printLine = document.createElement('div');
-      printLine.style.display = 'grid'; printLine.style.gridTemplateColumns = '150px 1fr'; printLine.style.gap = '12px'; printLine.style.alignItems = 'center'; printLine.style.margin = '10px 0'; printLine.style.pageBreakInside = 'avoid';
-      const img = srcLine.querySelector('img.image-preview');
-      if(img){ const ci = document.createElement('img'); ci.src = img.src; ci.alt='Activity image'; ci.style.width='150px'; printLine.appendChild(ci);} else { const sp=document.createElement('div'); sp.style.width='150px'; sp.style.height='1px'; printLine.appendChild(sp);}    
-      const textWrap = document.createElement('div');
-      const word = (srcLine.querySelector('.word')?.textContent || '').trim();
-      const wordTitle = document.createElement('div'); wordTitle.textContent = word; wordTitle.style.fontSize='36px'; wordTitle.style.fontWeight='700'; wordTitle.style.marginBottom='4px'; textWrap.appendChild(wordTitle);
-      const dotted = document.createElement('div'); dotted.style.fontFamily = '\\'KGPrimaryDots\\', Arial, sans-serif'; dotted.style.fontSize = '48px'; dotted.style.letterSpacing='3px'; dotted.style.lineHeight='1.3';
-      const dottedSource = srcLine.querySelector('.dotted-text');
-      if(dottedSource){ dotted.innerHTML = dottedSource.innerHTML; } else if(word){ dotted.textContent = word + ' '; }
-      textWrap.appendChild(dotted);
-      printLine.appendChild(textWrap);
-      printRoot.appendChild(printLine);
+    // Initialize event listeners when DOM is ready
+    document.addEventListener('DOMContentLoaded', function() {
+      const pdfBtn = document.getElementById('pdfBtn');
+      if(pdfBtn) {
+        pdfBtn.addEventListener('click', generatePDFPrintOnly);
+      }
     });
-
-    document.body.appendChild(printRoot);
-
-    const opt = { filename:'Hannah_Fine_Motor_Skills.pdf', margin:[8,8,12,8], pagebreak:{ mode:['avoid-all','css','legacy'] }, image:{ type:'jpeg', quality:0.98 }, html2canvas:{ scale:2, useCORS:true, letterRendering:true }, jsPDF:{ unit:'mm', format:'a4', orientation:'portrait', compress:true } };
-
-    try{ await waitForFonts(); await html2pdf().from(printRoot).set(opt).save(); } catch(err){ console.error(err); alert('There was an error generating the PDF. See console for details.'); } finally { printRoot.remove(); }
-  }
-
-  domReady().then(()=>{
-    const btn = document.getElementById('pdfBtn');
-    if(btn){
-      btn.replaceWith(btn.cloneNode(true)); // remove stale listeners
-      const fresh = document.getElementById('pdfBtn');
-      fresh.addEventListener('click', window.generatePDFPrintOnly);
-    }
-  });
-})();
-</script>
-
+  </script>
 </body>
 </html>
