--- a/Level0/Unit1/teacher/Fine Motor Skills/index.html
+++ b/Level0/Unit1/teacher/Fine Motor Skills/index.html
@@ -372,16 +372,48 @@
       nameDateWrap.style.textAlign = 'right';
       nameDateWrap.style.minWidth = '250px';
       
+      // CORREÇÃO: Name e Date na mesma linha das linhas de preenchimento
       const nameLine = document.createElement('div');
-      nameLine.textContent = 'Name: _________________________________________';
-      nameLine.style.fontSize = '14px';
+      nameLine.style.display = 'flex';
+      nameLine.style.alignItems = 'center';
+      nameLine.style.gap = '8px';
       nameLine.style.marginBottom = '8px';
+      nameLine.style.fontSize = '14px';
       nameLine.style.color = '#475569';
 
+      const nameLabel = document.createElement('span');
+      nameLabel.textContent = 'Name:';
+      nameLabel.style.whiteSpace = 'nowrap';
+
+      const nameUnderline = document.createElement('span');
+      nameUnderline.textContent = '_________________________';
+      nameUnderline.style.borderBottom = '1px solid #94a3b8';
+      nameUnderline.style.flex = '1';
+      nameUnderline.style.minWidth = '150px';
+      nameUnderline.style.letterSpacing = '1px';
+
+      nameLine.appendChild(nameLabel);
+      nameLine.appendChild(nameUnderline);
+
       const dateLine = document.createElement('div');
-      dateLine.textContent = 'Date: _____________';
+      dateLine.style.display = 'flex';
+      dateLine.style.alignItems = 'center';
+      dateLine.style.gap = '8px';
       dateLine.style.fontSize = '14px';
       dateLine.style.color = '#475569';
+
+      const dateLabel = document.createElement('span');
+      dateLabel.textContent = 'Date:';
+      dateLabel.style.whiteSpace = 'nowrap';
+
+      const dateUnderline = document.createElement('span');
+      dateUnderline.textContent = '_____________';
+      dateUnderline.style.borderBottom = '1px solid #94a3b8';
+      dateUnderline.style.minWidth = '80px';
+      dateUnderline.style.letterSpacing = '1px';
+
+      dateLine.appendChild(dateLabel);
+      dateLine.appendChild(dateUnderline);
 
       nameDateWrap.appendChild(nameLine);
       nameDateWrap.appendChild(dateLine);
